Modif mise en page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Application Web Partenariats</title>
+        <title>Annuaire</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="icon" href="annuaire.ico">
+        <link rel="icon" href="ISIS.ico">
         <link rel="stylesheet" type="text/css" href="css/style.css"/>	
     </head>
     <body>
         <h1>Annuaire ISIS</h1>
+        <!--
         <nav>
             <a href="Lannuaire.html"><input type ="button" value ="Consulter l'Annuaire"></a><br/>
             <a href="Mannuaire.html"><input type ="button" value ="Modifier l'Annuaire"></a>
-        </nav>
+        </nav>-->
         <ul>
-            <li>Liste de tous les élements
+            <li>Liste de tous les éléments
                 <ul>
-                    <li><a href="partenariats/partenaire/show">Liste des partenaire</a></li>
+                    <li><a href="partenariats/partenaire/show">Liste des partenaires</a></li>
                     <li><a href="partenariats/contact/show">Liste des contacts</a></li>
                     <li><a href="partenariats/etiquette/show">Liste des étiquettes</a></li>
                     <li><a href="partenariats/commentaire/show">Liste des commentaires</a></li>
+                    <li><a href="partenariats/partenaire/contact">Liste des contacts par entreprise</a></li>
+                    <li><a href="partenariats/etiquette/partenaire">Liste des partenaires par etiquettes</a></li>
+                    
                 </ul>
             </li>            
             <li><a href="h2-console" target="_blank">Console d'administration de la base de données H2 (URL jdbc:h2:mem:testdb)</a></li>
